# richlog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/richlog/: __init__.py  __main__.py  shortcuts.py
src/richlog/config/: defaults.py  settings.py
src/richlog/core/: __init__.py  formatters.py  handlers.py  logger.py
src/richlog/utils/: context.py  decorators.py
tests/: test_shortcuts.py
tests/config/: test_defaults.py  test_settings.py
tests/core/: test_formatters.py  test_handlers.py  test_logger.py
tests/utils/: test_context.py  test_decorators.py
