[project]
name = "richlog"
version = "0.1.0"
description = "A rich logging library for Python"
readme = "README.md"
authors = [
    { name = "Prgckwb", email = "dev@prgckwb.com" }
]
requires-python = ">=3.9"
dependencies = [
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "richlog",
]

[tool.uv.sources]
richlog = { workspace = true }


